[project]
name = "wechat-bill-analyzer"
version = "0.2.0"
description = "微信支付账单批处理解析器，支持 ZIP 压缩包和独立 PDF 文件的批量处理，生成 Excel 和可视化报告"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pdfplumber>=0.11.9",
    "pyecharts>=2.0.9",
    "pyzipper>=0.3.6",
    "tqdm>=4.67.2",
    "xlsxwriter>=3.2.9",
    "selenium>=4.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "utils", "visualize", "screenshot_utils"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
